--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
-python-telegram-bot==21.6
+python-telegram-bot[job-queue]==20.3
 python-dotenv==1.0.0
-flask==3.0.0
 requests==2.31.0
 aiohttp==3.9.0
-httpx==0.28.1
