--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
-python-telegram-bot==20.7
+python-telegram-bot[job-queue]==21.7
 python-dotenv==1.0.0
-Flask==3.0.0
+requests==2.31.0
+aiohttp==3.9.0
